--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,10 +11,18 @@
     <%= f.input :website, placeholder:"Website", label: false %>
     <%= f.input :twitter, placeholder:"Twitter", label: false %>
   </div>
-<div class="form-inline">
-  <%= f.input :logo, :label_html => { :class => 'type' } %>
-</div>
-  <div class="form-actions register-form-group btn register-btn">
-    <%= f.button :submit, class: ".btn-default register-btn" %>
+
+<div class="control-group">
+  <div class="attach-set text-center">
+    <%= f.input :logo, input_html: { class: 'hidden-input' }, label: 'Upload company logo' %>
+    <div class="input-append">
+      <input id="file-display" class="input-large uneditable-input" type="text">
+      <a id="upload-btn" class="btn"><i class="icon-upload-alt"></i>Upload</a>
+    </div>
+  </div> <!-- /attach-set -->
+</div> <!-- /control-group -->
+
+  <div class="form-actions register-form-group">
+    <%= f.button :submit, class: "btn btn-default register-button" %>
   </div>
 <% end %>
