--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,6 +6,6 @@
 
 <p id="register-p">Already have an account? <%= link_to 'Log in', new_session_path %></p>
 
-<%= link_to '<<Back', users_path %>
+<span style="font-size: 1.3em;"><%= link_to '<<Back', users_path %></span>
 </div>
 </body>
