add @reviews to games games#show controller, edited index_admin, edit show_dev

--- a/app/views/games/_show_dev.html.erb
+++ b/app/views/games/_show_dev.html.erb
@@ -6,7 +6,7 @@
   <h3>General Ratings: <%= @reviews.count %> feedbacks</h3>
 
   <!-- change path to download action in game controller -->
-  <%= link_to 'download pdf', game_review_path %>
+  <%= link_to 'download pdf', root_path %>
 
   <div style="text-align: center"><h4>Overview</h4></div>
   <h3>Fun</h3>
