added delete, update, feedback links and fanctionality

--- a/app/views/games/_index_dev.html.erb
+++ b/app/views/games/_index_dev.html.erb
@@ -9,7 +9,7 @@
  <% if @games.present? %>
    <% @games.each do |g| %>
      <div>
-       <% if g.user == current_user %>
+       <% if g.user = current_user %>
          <p><%= display_picture(g) %></p>
          <p><%= g.title %></p>
          <p><%= g.current_status %></p>
