--- a/app/views/games/_index_admin.html.erb
+++ b/app/views/games/_index_admin.html.erb
@@ -1,10 +1,26 @@
 <h2>List of Games to Approve</h2>
 <hr>
-<% games_for_review = Status.find_by_name("Under Review").games %>
+<% games_for_review = Status.find(3).games %>
 <% games_for_review.each do |game| %>
   <div>
+    <div><%= display_picture(game) %></div>
     <div><%= link_to game.title, game_path(game)%></div>
-    <div><%= game.user.company %></div>
-    <hr>
+    <div>Made by: <%= game.user.company %></div>
+    <div>
+      <% game.taggings.each do |tagging| %>
+        <%= Tag.find(tagging.tag_id).name %> &nbsp;|&nbsp;
+      <% end %>
+    </div>
+    <br>
   </div>
 <% end %>
+<hr>
+<div>
+  Status of Arcades
+  <hr>
+  <div>
+    <% Location.find_each do |location| %>
+      <%= location.name %>: <strong><%= location.run_status %></strong> <br>
+    <% end %>
+  </div>
+</div>
