--- a/app/views/games/_index_admin.html.erb
+++ b/app/views/games/_index_admin.html.erb
@@ -1,10 +1,25 @@
-<h2>List of Games to Approve</h2>
-<hr>
-<% games_for_review = Status.find_by_name("Under Review").games %>
-<% games_for_review.each do |game| %>
-  <div>
-    <div><%= link_to game.title, game_path(game)%></div>
-    <div><%= game.user.company %></div>
-    <hr>
+<h2>Master lis of games</h2>
+
+<div>
+<% if @games.present? %>
+  <% @games.each do |g|  %>
+  <!-- Each game is in a div  -->
+    <div>
+      <div><%= display_picture g %></div>
+        <h2><%= link_to g.title, game_path(g) %></h2>
+        <p><%= link_to g.user.company, game_path(g) %></p>
+        <p><%= g.tags.map {|t| t.name}.join(", ") %></p>
+        <p><%= g.status.name %></p>
+        <hr>
+      </div>
   </div>
+  <% end %>
+<% else %>
+  <p>There are no matches for your search</p>
+<% end %>
+<%= paginate @games %>
+
+<%= form_tag(games_path, :method => 'get', id: 'tags') do %>
+<%= collection_check_boxes(:tag, :tag_ids, @tags, :id, :name, include_hidden: false) %>
+<%= submit_tag :search %>
 <% end %>
