--- a/app/views/games/_index_gamer.html.erb
+++ b/app/views/games/_index_gamer.html.erb
@@ -1,11 +1,12 @@
-
   <h1>All Games</h1>
   <!-- All games are contained in a div -->
   <div>
+    <% @games = @games.find_by_status(1) %>
   <% if @games.present? %>
     <% @games.each do |g|  %>
     <!-- Each game is in a div  -->
       <div>
+        <div><%= display_picture g %></div>
           <h2><%= link_to g.title, game_path(g) %></h2>
           <p><%= link_to g.user.company, game_path(g) %></p>
           <p><%= g.tags.map {|t| t.name}.join(", ") %></p>
