Pulling newest version of integration

--- a/app/views/home/faq.html.erb
+++ b/app/views/home/faq.html.erb
@@ -1,12 +1,13 @@
 <%#= image_tag('background.png', style: "height: 300px; width: 300px") %>
-<div id="boxy">
+<div class="container-fluid" id="boxy">
+  <div class="row">
+    <div class="col-sm-8 col-sm-offset-2" >
 
-  <h1>FAQ/Help (gamers)</h1>
+<br>
 
-  FAQ
-  For Arcade Players
-  <h3>Arcades</h3>
+  <h1>FAQ</h1>
 
+  <h2>For Arcade Players</h2>
         <button class="accordion">Where Can I find the nearst Indie Arcade?</button>
         <div class="panel">
           <p>Lorem ipsum..</p>
@@ -17,16 +18,8 @@
           <p>Lorem ipsum...</p>
         </div>
 
-  Developers
-  <ul>
-    <div id="question" class="col-md-3">
 
-      <li><a href="#UploadingGame"> I can't upload my game </a></li>
-      <li><a href="#MyGameDoesNotUpload"> Help! My game doesn't upload! </a></li>
-    </div>
-
-  </ul>
-
+  <h2>For Developers</h2>
 
 
 
@@ -40,5 +33,14 @@
     <p>Lorem ipsum...</p>
   </div>
   <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
 
+</div>
+
+</div>
 </div>
