--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -205,3 +205,76 @@ img.carousel-inner {
 .fa-stack a {
     color: #333;
 }
+
+
+// Styling for FAQ page
+#boxy{
+  background: url( asset-path('background.png') );
+  background-size: cover;
+}
+
+#question{
+  background: #0073e6;
+  color: #ffffff;
+  font-size: 10px;
+  font-weight: bold;
+}
+
+a
+{
+    color: #ffffff;
+}
+/* Style the buttons that are used to open and close the accordion panel */
+/* Style the buttons that are used to open and close the accordion panel */
+button.accordion {
+    background-color: #0073e6;
+    color: #ffffff;
+    cursor: pointer;
+    padding: 10px;
+    width: 100%;
+    padding: 10px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+
+    text-align: left;
+    border: none;
+    outline: none;
+    transition: 0.4s;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+button.accordion.active, button.accordion:hover {
+    background-color: #ddd;
+}
+button.accordion:after {
+    content: '\02795'; /* Unicode character for "plus" sign (+) */
+    font-size: 13px;
+    color: #777;
+    float: right;
+    margin-left: 5px;
+}
+
+button.accordion.active:after {
+    content: "\2796"; /* Unicode character for "minus" sign (-) */
+}
+/* Style the accordion panel. Note: hidden by default */
+div.panel {
+    // padding: 0 18px;
+    background-color: #99bbff;
+    max-height: 0;
+    overflow: hidden;
+    transition: 0.6s ease-in-out;
+    opacity: 0;
+
+    padding: 10px;
+    width: 100%;
+    padding: 10px;
+
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+div.panel.show {
+    opacity: 1;
+    max-height: 500px; /* Whatever you like, as long as its more than the height of the content (on all screen sizes) */
+}
