--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,8 @@
         <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
         <link href="https://fonts.googleapis.com/css?family=Prompt:400,700" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
+        <!-- this makes everything responsive -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
     <body>
