--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,51 +1,56 @@
 
-<div id="developer-page-wrapper">
-  <div class='col-xs-4'>
-    <div id="dev-logo" style="background-image: url('<%= @user.logo %>')"></div>
-    <h4>
-      <strong>Company:</strong>
-      <%= @user.company %>
-    </h4>
+<div id="developer-page-wrapper" class="row">
+  <div id="dev-background-color">
+    <div id="dev-info">
+      <div style="text-align: center">
+        <div id="dev-logo" style="background-image: url('<%= @user.logo %>')"></div>
+      </div>
+    <div style="padding: 10px">
 
-    <h4>
-      <strong>Email:</strong>
-      <%= @user.email %>
-    </h4>
+      <h4>
+        <strong>Company:</strong>
+        <%= @user.company %>
+      </h4>
 
-    <h4>
-      <strong>Employees:</strong>
-      <%= @user.employees %>
-    </h4>
+      <h4>
+        <strong>Email:</strong>
+        <%= @user.email %>
+      </h4>
 
-    <h4>
-      <strong>Genres:</strong>
-      <%= @user.genres %>
-    </h4>
+      <h4>
+        <strong>Employees:</strong>
+        <%= @user.employees %>
+      </h4>
 
-    <h4>
-      <strong>Website:</strong>
-      <%= @user.website %>
-    </h4>
+      <h4>
+        <strong>Genres:</strong>
+        <%= @user.genres %>
+      </h4>
 
-    <h4>
-      <strong>Twitter:</strong>
-      <%= @user.twitter %>
-    </h4>
+      <h4>
+        <strong>Website:</strong>
+        <%= @user.website %>
+      </h4>
+
+      <h4>
+        <strong>Twitter:</strong>1
+        <%= @user.twitter %>
+      </h4>
+    </div>
+
   </div>
-  <div class="col-xs-8">
+  <div id="dev-games-list">
     <% @games.each do |game| %>
-      <div class="row" style="text-align: center">
-        <h1><%= game.title %></h1>
-        <div class="col-xs-4">
-          <div id="game-picture" style="background-image: url('<%= game.picture %>')"></div>
-            </div>
-        <div class="col-xs-8" style="text-align: center">
+    <div class="individual-game-info">
+        <div id="game-picture" style="background-image: url('<%= game.picture %>'); display: inline-block"></div>
+        <div id="text-info" >
+          <h1 style="color: #003c62"><%= game.title %></h1>
+          <hr style="border: 1px solid ">
           <h2><%= game.description %></h2>
         </div>
-      </div>
-      <hr>
+    </div>
     <% end %>
   </div>
 
-
+  </div>
 </div>
