--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,53 +1,64 @@
 <body id="index-bg">
-  <!-- ADMIN VIEW -->
-<%# If current user is an admin show this via authorizations %>
-<% if user_is_admin? %>
-  <%= render 'index_admin' %>
-<!-- DEV VIEW -->
-<% elsif user_is_dev? %>
-  <%= render 'index_dev' %>
-<!-- GAMER VIEW -->
-<% else %>
-  <%= render 'index_gamer' %>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-3">
+          <div class="container-index-games">
+              <%= form_tag(games_path, :method => 'get', id: 'tags') do %>
+
+              <% @tags.each do |t| %>
+              <p>
+                  <%= check_box_tag(t.id) %>
+                  <%= label_tag(t.id, "#{t.name}") %>
+              </p>
+              <% end %>
+              <%= submit_tag :search %>
+              <% end %>
+
+              <!-- Bar used bay users to search for gams by developer. All developers that include the entered string will be returned. -->
+
+              <%= form_tag(games_path, :method => 'get', id: 'search-form') do %>
+              <div>
+                  <%= label_tag :search_by_user %>
+                  <%= text_field_tag :search_user, [:search_user] %>
+                  <%= submit_tag :search_user %>
+              </div>
+              <% end %>
+          </div>
+        </div>
+        <div class="col-sm-9">
+        <!-- ADMIN VIEW -->
+        <%# If current user is an admin show this via authorizations %>
+        <% if user_is_admin? %>
+          <%= render 'index_admin' %>
+        <% elsif user_is_dev? %>
+        <!-- DEV VIEW -->
+          <%= render 'index_dev' %>
+        <% else %>
+        <!-- GAMER VIEW -->
+          <%= render 'index_gamer' %>
+
+          <h1 id="games-index-h1">All Games</h1>
+        <!-- All games are contained in a div -->
+        <div style="min-height:500px;">
+            <% if @games.present? %>
+            <% @games.each do |g|  %>
+            <!-- Each game is in a div  -->
+            <div>
+                <h2><%= g.title %></h2>
+                <p><%= g.user.company %></p>
+                <p><%= g.tags.map {|t| t.name}.join(", ") %></p>
+                <hr>
+            </div>
+        </div>
+        <% end %>
+    <% else %>
+        <p>There are no matches for
+            <%= params[:search] %></p>
+        <% end %>
+        <% end %>
 
 
-  <h1 id="games-index-h1">All Games</h1>
-  <!-- All games are contained in a div -->
-  <div style="min-height:500px;">
-  <% if @games.present? %>
-    <% @games.each do |g|  %>
-    <!-- Each game is in a div  -->
-      <div>
-        <h2><%= g.title %></h2>
-        <p><%= g.user.company %></p>
-        <p><%= g.tags.map {|t| t.name}.join(", ") %></p>
-        <hr>
+        </div>
       </div>
     </div>
-    <% end %>
-  <% else %>
-    <p>There are no matches for <%= params[:search] %></p>
-  <% end %>
-<% end %>
-
-<%= form_tag(games_path, :method => 'get', id: 'tags') do %>
-
-  <% @tags.each do |t| %>
-     <p>
-       <%= check_box_tag(t.id) %>
-       <%= label_tag(t.id, "#{t.name}") %>
-     </p>
-     <% end %>
-     <%= submit_tag :search %>
-<% end %>
-  <!-- Bar used bay users to search for gams by developer. All developers that include the entered string will be returned. -->
-
-<%= form_tag(games_path, :method => 'get', id: 'search-form') do %>
-  <div>
-    <%= label_tag :search_by_user %>
-    <%= text_field_tag :search_user, [:search_user] %>
-    <%= submit_tag :search_user %>
-  </div>
-<% end %>
-
 </body>
