--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -118,7 +118,7 @@ a:hover {
 }
 
 
-// END NAVBAR SYLING
+// END NAVBAR STYLING
 
 // FOOTER
 
@@ -162,7 +162,7 @@ a:hover {
   height: 50px;
 }
 
-
+// Search
 #search-wrapper {
   position: fixed;
   width: 100%;
