fix bug 16 not displaying current_user.company

--- a/app/views/games/_index_dev.html.erb
+++ b/app/views/games/_index_dev.html.erb
@@ -1,4 +1,4 @@
-<h1><% current_user.company %></h1>
+<h1><%= current_user.company %></h1>
 <!-- All games are contained in a div -->
 <div>
 <% if @games.present? %>
