Made some big fixes

--- a/app/views/games/_index_admin.html.erb
+++ b/app/views/games/_index_admin.html.erb
@@ -1,5 +1,12 @@
 <h2>Master list of games</h2>
 
+<%= form_tag(games_path, :method => 'get', id: 'statuses') do %>
+<P> Filter results by status </p>
+<%= collection_select(:search_status,:status, @statuses, :id, :name, include_hidden: false) %>
+<%= submit_tag :search %>
+<% end %>
+<hr>
+
 <div>
 <% if @games.present? %>
   <% @games.each do |g|  %>
@@ -18,45 +25,3 @@
   <p>There are no matches for your search</p>
 <% end %>
 <%= paginate @games %>
-
-<%= form_tag(games_path, :method => 'get', id: 'tags') do %>
-<%= collection_check_boxes(:tag, :tag_ids, @tags, :id, :name, include_hidden: false) %>
-<%= submit_tag :search %>
-<% end %>
-<% games_not_released = Status.find_by_name("Not released").games %>
-<% games_not_released.each do |game| %>
-  <div>
-    <div><%= link_to game.title, game_path(game)%></div>
-    <div><%= game.user.company %></div>
-    <div><%= game.status.name %></div>
-    <hr>
-  </div>
-<% end %>
-<% games_released = Status.find_by_name("Released to arcade").games %>
-<% games_released.each do |game| %>
-  <div>
-    <div><%= link_to game.title, game_path(game)%></div>
-    <div><%= game.user.company %></div>
-    <div><%= game.status.name %></div>
-    <hr>
-  </div>
-<% end %>
-<% games_rejected = Status.find_by_name("Rejected").games %>
-<% games_rejected.each do |game| %>
-  <div>
-    <div><%= link_to game.title, game_path(game)%></div>
-    <div><%= game.user.company %></div>
-    <div><%= game.status.name %></div>
-    <hr>
-  </div>
-<% end %>
-<hr>
-<div>
-  Status of Arcades
-  <hr>
-  <div>
-    <% Location.find_each do |location| %>
-      <%= location.name %>: <strong><%= location.run_status %></strong> <br>
-    <% end %>
-  </div>
-</div>
