--- a/app/views/games/_show_gamer.html.erb
+++ b/app/views/games/_show_gamer.html.erb
@@ -1,7 +1,7 @@
 <h2><%= @game.title %></h2>
 <div><%= display_picture @game %></div>
 <div>
-  <div>Made by: <%= @developer %></div>
+  <div>Made by: <%= link_to @developer, user_path(User.find_by(company: @developer)) %></div>
   <div>Date: <%= @date %></div>
   <div>Type:</div>
   <div>
