--- a/app/views/games/_index_gamer.html.erb
+++ b/app/views/games/_index_gamer.html.erb
@@ -7,7 +7,7 @@
       <div>
         <div><%= display_picture g %></div>
           <h2><%= link_to g.title, game_path(g) %></h2>
-          <p><%= link_to g.user.company, game_path(g) %></p>
+          <p><%= link_to g.user.company, user_path(g.user) %></p>
           <p><%= g.tags.map {|t| t.name}.join(", ") %></p>
           <p><%= g.status.name %></p>
           <hr>
