--- a/app/views/layouts/_nav_gamer.html.erb
+++ b/app/views/layouts/_nav_gamer.html.erb
@@ -46,7 +46,7 @@
                     <a href="" class="dropdown-toggle" data-toggle="dropdown">
                         <span class="glyphicon glyphicon-search" id="search"></span>
                     </a>
-                    <form id="search-wrapper" action="post" method="/games">
+                    <form id="search-wrapper" action="/games" method="get">
                         <input type="text" name="search_main" class="form-control" name="search" placeholder="Search for a game or a studio" id="search-bar">
                         <button type="submit" class="btn btn-default" style="display: none">Submit</button>
                     </form>
