--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -11,7 +11,7 @@
   background-size: 100%;
 }
 
-#games-index-h1 {
+.games-index-h1 {
   font-size: 3em;
   font-family: 'Prompt', sans-serif;
   font-weight: bold;
@@ -19,9 +19,143 @@
   text-align: center;
   margin-top: 40px;
   margin-bottom: 30px;
+  text-align: left;
 }
 
 .container-index-games {
   background-color: #fff;
-  opacity: 0.6;
+  opacity: 0.7;
+  margin-top: 50px;
+  padding-bottom: 20px;
+}
+
+.checkbox label {
+  color: #333;
+  text-align: left;
+  margin-left: 10px;
+}
+
+.checkbox input[type="checkbox"] {
+  margin-left: 10px;
+}
+
+form#tags {
+  padding: 10px;
+}
+
+#narrow-by-tags {
+  margin-left: 10px;
+  font-weight: bold;
+}
+
+input {
+  &.search-tags-btn {
+    margin-left: 10px;
+  }
+}
+
+input.search-tags-btn {
+  background-color: #EF7030;
+  border-color: #EF7030;
+  color: #fff;
+  border-radius: 4px;
+}
+
+input.search-tags-btn:hover {
+  background-color: #F9804B;
+  border-color: #EF7030;
+  color: #fff;
+}
+
+input#search_user {
+  margin-left: 20px;
+  border-radius: 4px;
+  width: 110px;
+}
+
+#search-form div label {
+  color: #333;
+  text-align: left;
+  margin-left: 20px;
+}
+
+#search-for-studio {
+  background-color: #EF7030;
+  border-color: #EF7030;
+  color: #fff;
+  border-radius: 4px;
+}
+
+#search-for-studio:hover {
+  background-color: #F9804B;
+  border-color: #EF7030;
+  color: #fff;
+}
+
+.game-picture {
+  float: left;
+  width: 360px;
+}
+
+.game-details {
+  float: left;
+}
+
+.pagination a, .pagination span.current, .pagination span.gap {
+    float: left;
+    padding: 0 14px;
+    line-height: 38px;
+    text-decoration: none;
+    background-color: white;
+    border: 1px solid #ddd;
+    border-right-width: 0px;
+    color: #003C62;
+}
+
+.pagination a:hover {
+  background-color: #F9804B;
+  border-top: 1px solid #F9804B;
+  border-bottom: 1px solid #F9804B;
+  color: white;
+  text-decoration: none;
+}
+
+// .pagination span.current {
+//   border-right-width: 1px;
+// }
+
+.pagination span.current:last-child {
+  border-right-width: 1px;
+}
+
+.pagination {
+
+    // .first{
+    //     // padding : 0;
+    //     // float: none;
+    //
+    // }
+    // .prev {
+    //     padding : 0;
+    //     float: none;
+    //     border: none;
+    // }
+    // .page{
+    //     padding : 0;
+    //     float: none;
+    //     border: none;
+    // }
+    // .next{
+    //     padding : 0;
+    //     float: none;
+    //     border: none;
+    // }
+    .last {
+      a {
+        // padding : 0;
+        // float: none;
+        // border: none;
+        border-right-width: 1px;
+      }
+    }
 }
