--- a/app/views/games/_index_gamer.html.erb
+++ b/app/views/games/_index_gamer.html.erb
@@ -1,18 +1,17 @@
-  <h1>All Games</h1>
+  <h1 class="games-index-h1">All Games</h1>
   <!-- All games are contained in a div -->
-  <div>
   <% if @games.present? %>
     <% @games.each do |g|  %>
     <!-- Each game is in a div  -->
       <div>
-
         <div><%= display_picture g %></div>
+        <div>
           <h2><%= link_to g.title, game_path(g) %></h2>
           <p><%= link_to g.user.company, game_path(g) %></p>
           <p><%= g.tags.map {|t| t.name}.join(", ") %></p>
           <hr>
         </div>
-    </div>
+      </div>
     <% end %>
   <% else %>
     <p>There are no matches for your search</p>
