--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -1,10 +1,11 @@
 <!-- DEVS GAME UPLOAD PAGE -->
-<p>
-  Note: Game must meet the following minimum hardware specs. Every
-  game will be tested. If it cannot be run, it will be rejected.
-</p>
+<div class ="container upload">
+  <p class ="control-group">
+    Note: Game must meet the following minimum hardware specs. Every
+    game will be tested. If it cannot be run, it will be rejected.
+  </p>
 
-<%= simple_form_for(@game) do |f| %>
+  <%= simple_form_for(@game) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
@@ -12,16 +13,18 @@
     <%= f.input :description %>
     <%= f.input :picture %>
     <%= f.collection_select(:tag_ids, Tag.all, :id, :name,
-                            {},
-                            { multiple: true, class: 'chosen-select' }) %>
+    {},
+    { multiple: true, class: 'chosen-select' }) %>
     <%= f.input :link %>
   </div>
 
   <div class="form-actions">
     <%= f.button :submit %>
   </div>
-<% end %>
+  <% end %>
 
-<script>
+  <script>
   $('.chosen-select').chosen({});
-</script>
+  </script>
+
+</div>
