--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -173,3 +173,9 @@ input#search_user {
 #submit-show {
   padding-bottom: 50px;
 }
+
+p.control-group {
+  text-align: center;
+  color: white;
+  margin-top: 15px;
+}
