--- a/app/views/layouts/_nav_admin.html.erb
+++ b/app/views/layouts/_nav_admin.html.erb
@@ -30,6 +30,7 @@
                     <ul class="dropdown-menu">
                       <!-- add stuff later. Need different menues for admin vs dev -->
                       <li><%= link_to "Review Games", games_path %></li>
+                      <li><%= link_to "Messages", messages_path %></li>
                       <li><%= link_to "Sign Out", sessions_path, method: :delete %></li>
                     </ul>
                   </li>
