--- a/app/views/home/faq.html.erb
+++ b/app/views/home/faq.html.erb
@@ -1,5 +1,5 @@
 <%#= image_tag('background.png', style: "height: 300px; width: 300px") %>
-<div class="container-fluid" id="boxy">
+<div class="container-fluid" id="boxy" style="min-height:500px">
   <div class="row">
     <div class="col-sm-8 col-sm-offset-2" >
 
