--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
 
         <!-- Footer -->
         <footer>
-            <div class="home-footer">
+            <div class="home-footer footer navbar-bottom">
                 <div class="home-footer-left">
                     <div><%= image_tag "logo.png" %></div>
                     <div><%= link_to "About", about_path %></div>
