--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -7,6 +7,7 @@
 
   <%= simple_form_for(@game) do |f| %>
   <%= f.error_notification %>
+  <%= @game.errors.full_messages.join(", ") %>
 
   <div class="form-inputs">
     <%= f.input :title %>
@@ -22,9 +23,8 @@
     <%= f.button :submit %>
   </div>
   <% end %>
-
-  <script>
-  $('.chosen-select').chosen({});
-  </script>
-
 </div>
+
+<script>
+$('.chosen-select').chosen({});
+</script>
