--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -1,5 +1,5 @@
 <!-- DEVS GAME UPLOAD PAGE -->
-<div class ="container upload">
+<div class ="upload">
   <p class ="control-group">
     Note: Game must meet the following minimum hardware specs. Every
     game will be tested. If it cannot be run, it will be rejected.
