--- a/app/views/games/_show_dev.html.erb
+++ b/app/views/games/_show_dev.html.erb
@@ -1,17 +1,16 @@
-<h1>Game Title: <%= @game.title %></h1>
-
-
 <div class="container">
+<h1 style="font-weight:bold; margin-bottom: 20px; color: #EF7030;">Game Title: <%= @game.title %></h1>
+
 
   <h3>General Ratings: <%= @reviews.count %> feedbacks</h3>
 
   <!-- change path to download action in game controller -->
 
-  <%= link_to 'download pdf', game_review_path(@game.id) %>
+  <%= link_to 'download pdf', game_review_path(@game.id), class: "orange"%>
 
 
-  <div style="text-align: center"><h4>Overview</h4></div>
-  <h3>Fun</h3>
+  <div style="text-align: center"><h3>Overview</h3></div>
+  <h4>Fun</h4>
   <div class="progress">
     <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow=""
     aria-valuemin="0" aria-valuemax="100" style="width:<%= @fun.nil? ? 0 : @fun * 20 %>%">
@@ -19,7 +18,7 @@
     </div>
   </div>
 
-  <h3>Playability</h3>
+  <h4>Playability</h4>
   <div class="progress">
     <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow=""
     aria-valuemin="0" aria-valuemax="100" style="width:<%= @playability.nil? ? 0 :  @playability* 20 %>%">
@@ -27,14 +26,14 @@
     </div>
   </div>
 
-  <h3>Difficulty</h3>
+  <h4>Difficulty</h4>
   <div class="progress">
     <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70"
     aria-valuemin="0" aria-valuemax="100" style="width:<%= @difficulty.nil? ? 0 : @difficulty * 20 %>%">
       <%= @difficulty.nil? ? "N/A" : @difficulty * 20 %>%
     </div>
   </div>
+  <a class="orange" href="#">Download crash logs</a>
 </div>
 
 <!-- Crash logs don't exist so we just have an empty link -->
-<a href="#">Download crash logs</a>
