--- a/app/views/games/_index_gamer.html.erb
+++ b/app/views/games/_index_gamer.html.erb
@@ -5,12 +5,13 @@
    <!-- Each game is in a div  -->
      <div class="wrap">
        <div class="game-picture"><%= display_picture g %></div>
-       <div class="game-details">
-         <h2 style="float:left;"><%= link_to g.title, game_path(g), class: "game-title" %></h2>
+       <div class="gamer-details">
+         <h2><%= link_to g.title, game_path(g), class: "game-title" %></h2>
          <div>
          <p>made by: <%= link_to g.user.company, user_path(g.user) %></p>
+         <hr style="border-color: #333;">
          <p><%= g.tags.map {|t| t.name}.join(", ") %></p>
-         <p><%= g.status.name %></p>
+         <p style="color: #45A056; font-weight: bold;"><%= g.status.name %></p>
          </div>
        </div>
        </div>
