--- a/app/views/games/edit.html.erb
+++ b/app/views/games/edit.html.erb
@@ -1,3 +1,5 @@
-<h1>Edit Game</h1>
+<div class="container">
+<h1 style="font-weight:bold; margin-bottom: 20px; color: #EF7030;">Edit Game</h1>
 
 <%= render 'form' %>
+</div>
