--- a/app/views/games/_index_admin.html.erb
+++ b/app/views/games/_index_admin.html.erb
@@ -1,7 +1,7 @@
-<h1 class="games-index-h1">All Games</h1>
+<h1 class="games-index-h1">Games Requiring Review</h1>
  <!-- All games are contained in a div -->
  <% if @games.present? %>
-   <% @games.each do |g|  %>
+   <% @games.where("status_id = ?", "3").each do |g|  %>
    <!-- Each game is in a div  -->
      <div class="wrap">
        <div class="game-picture"><%= display_picture g %></div>
@@ -19,4 +19,4 @@
  <% else %>
    <p>There are no matches for your search</p>
  <% end %>
- <%= paginate @games %>
+ <%= paginate @games.where("status_id = ?", "3") %>
