--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,4 +1,4 @@
-<body id="index-bg">
+<div id="index-bg">
     <div class="container">
         <div class="row">
             <div class="col-sm-3">
@@ -36,4 +36,4 @@
             </div> -->
         </div>
         <% end %>
-    </body>
+    </div>
