--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -34,7 +34,7 @@ div.container.upload, .game-show {
 
 .container-index-games {
   background: rgba(192,192,192,0.8);
-  margin-top: 50px;
+  margin-top: 45px;
   padding-bottom: 20px;
 }
 
@@ -60,6 +60,7 @@ form#tags {
 #narrow-by-tags {
   margin-left: 10px;
   font-weight: bold;
+  font-size: 1.3em;
 }
 
 input {
@@ -70,7 +71,7 @@ input {
 
 input.search-tags-btn {
   background-color: #EF7030;
-  border-color: #EF7030;
+  border: 0;
   color: #fff;
   border-radius: 4px;
 }
@@ -85,6 +86,8 @@ input#search_user {
   margin-left: 20px;
   border-radius: 4px;
   width: 160px;
+  border: 0;
+  padding-left: 5px;
 }
 
 #search-form div label {
@@ -95,14 +98,13 @@ input#search_user {
 
 #search-for-studio {
   background-color: #EF7030;
-  border-color: #EF7030;
+  border: 0;
   color: #fff;
   border-radius: 4px;
 }
 
 #search-for-studio:hover {
   background-color: #F9804B;
-  border-color: #EF7030;
   color: #fff;
 }
 
@@ -128,12 +130,22 @@ input#search_user {
 }
 
 .gamer-details a {
-  color: #EF7030;
+  color: #003C62;
   text-decoration: none;
 }
 
 .gamer-details a:hover {
-  color: #F98653;
+  color: #075982;
+}
+
+.gamer-details-author a {
+  color: #333;
+  text-decoration: none;
+}
+
+.gamer-details-author a:hover {
+  color: #666;
+  text-decoration: underline;
 }
 
 .gamer-details p {
@@ -142,6 +154,8 @@ input#search_user {
 
 .pagination {
   margin-bottom: 40px;
+  font-size: 1.2em;
+  font-weight: normal;
 }
 
 .pagination a, .pagination span.current, .pagination span.gap {
@@ -149,30 +163,14 @@ input#search_user {
     padding: 0 14px;
     line-height: 38px;
     text-decoration: none;
-    background-color: white;
-    border: 1px solid #ddd;
-    border-right-width: 0px;
-    color: #003C62;
+    background-color: #003C62;
+    color: #fff;
 }
 
 .pagination a:hover {
-  background-color: #F9804B;
-  border-top: 1px solid #F9804B;
-  border-bottom: 1px solid #F9804B;
+  background-color: #378DB7;
   color: white;
   text-decoration: none;
-}
-
-.pagination span.current:last-child {
-  border-right-width: 1px;
-}
-
-.pagination {
-    .last {
-      a {
-        border-right-width: 1px;
-      }
-    }
 }
 
 .radio label, .checkbox label {
@@ -194,7 +192,8 @@ p.control-group {
 form#tags label {
     text-align: left;
     color: #333;
-    font-size: 1.3em;
+    font-size: 1.1em;
+    font-weight: normal;
 }
 
 .game-picture {
@@ -232,7 +231,7 @@ form#tags label {
 }
 
 .game-details a {
-  color: #EF7030
+  color: #EF7030;
 }
 
 .checkbox_container {
@@ -326,4 +325,16 @@ p.control-group {
   color: #333;
   font-size: 1.2em;
   text-align: left;
+}
+
+.tag-boxes {
+  background-color: #EF7030;
+  padding: 5px;
+  color: #fff;
+  font-weight: lighter;
+  display: inline-block;
+}
+
+p.tag-boxes {
+  margin-bottom: 5px;
 }
