--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -11,7 +11,7 @@ div.container.upload, .game-show {
   min-height: 500px;
 }
 
-#index-bg {
+#index-bg, .upload {
   background-image: url("games-bg.jpg");
   background-color: #317484;
   background-position: top;
