--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -1,5 +1,5 @@
 <!-- DEVS GAME UPLOAD PAGE -->
-<div class ="upload">
+<div class ="upload container">
   <p class ="control-group">
     Note: Game must meet the following minimum hardware specs. Every
     game will be tested. If it cannot be run, it will be rejected.
@@ -10,7 +10,7 @@
   <%= @game.errors.full_messages.join(", ") %>
 
   <div class="form-inputs">
-    <%= f.input :title,  %>
+    <%= f.input :title%>
     <%= f.input :description %>
     <%= f.input :picture %>
     <%= f.collection_select(:tag_ids, Tag.all, :id, :name,
