--- a/app/views/games/_index_admin.html.erb
+++ b/app/views/games/_index_admin.html.erb
@@ -10,8 +10,14 @@
          <div>
          <p>made by: <%= link_to g.user.company, user_path(g.user) %></p>
          <hr style="border-color: #333;">
-         <p><%= g.tags.map {|t| t.name}.join(", ") %></p>
-         <p class = "game-status" style="color: #45A056; font-weight: bold;"><%= g.status.name %></p>
+
+         <% g.tags.each do |t| %>
+          <p class="tag-boxes">
+            <%= t.name %>
+          </p>
+         <% end %>
+
+         <p class = "game-status" style="color: #45A056; font-weight: bold; margin-top: 15px;"><%= g.status.name %></p>
          </div>
        </div>
        </div>
