--- a/app/views/games/_index_gamer.html.erb
+++ b/app/views/games/_index_gamer.html.erb
@@ -17,7 +17,7 @@
           </p>
          <% end %>
 
-         <p class = "game-status" style="color: #45A056; font-weight: bold;"><%= g.status.name %></p>
+         <p class = "game-status" style="color: #45A056; font-weight: bold; margin-top: 15px;"><%= g.status.name %></p>
 
          </div>
        </div>
