--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -161,8 +161,8 @@ a:hover {
   text-align: right;
   margin-right: 40px;
   width: 30%;
-  font-size: 18px;
-  text-decoration: underline;
+  font-size: 12px;
+  text-decoration: none;
 }
 .codecore-logo{
   height: 50px;
