--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -10,9 +10,10 @@
   <%= @game.errors.full_messages.join(", ") %>
 
   <div class="form-inputs">
-    <%= f.input :title,  %>
+    <%= f.input :title  %>
     <%= f.input :description %>
     <%= f.input :picture %>
+    <div class="label-for-tags">Tags</div>
     <%= f.collection_select(:tag_ids, Tag.all, :id, :name,
     {},
     { multiple: true, class: 'chosen-select' }) %>
