--- a/app/views/games/_show_dev.html.erb
+++ b/app/views/games/_show_dev.html.erb
@@ -34,6 +34,10 @@
     </div>
   </div>
   <a class="orange" href="#">Download crash logs</a>
+
+  <div class="back-btn-update"><%= link_to '<<Back', games_path %></div>
+  </div>
+  
 </div>
 
 <!-- Crash logs don't exist so we just have an empty link -->
