--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -19,6 +19,7 @@ div.container.upload, .game-show {
   background-size: 100%;
   width: 100%;
   min-height: 500px;
+  padding-bottom: 30px;
 }
 
 .games-index-h1 {
@@ -337,4 +338,40 @@ p.control-group {
 
 p.tag-boxes {
   margin-bottom: 5px;
+}
+
+.upload-form-control {
+  align-items: center;
+}
+
+.form-inputs input, .form-inputs textarea, .form-inputs select{
+  background-color: rgba(192,192,192,0.8);
+  color: #000;
+}
+
+p.control-group{
+  text-align: center;
+  color: #fff;
+  font-size: 1.3em;
+}
+
+h1 {
+  font-size: 3em;
+  font-family: 'Prompt', sans-serif;
+  font-weight: bold;
+  color: #fff;
+  text-align: center;
+  margin-top: 40px;
+  margin-bottom: 30px;
+}
+
+input#game_picture.file.optional {
+  background-color: #317484;
+  opacity: 0.6;
+  color: #fff;
+}
+
+label.control-label{
+  text-align:left;
+  padding-top:5px;
 }
